style fix: Lighthouse CEO test. contrast of button text increased

--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -244,7 +244,7 @@ textarea:not([rows]) {
     padding: 1.25em 2.5em;
     font-weight: var(--fw-bold);
     font-size: var(--fs-body);
-    color: var(--primary-clr);
+    color: var(--secondary-clr);
     line-height: 0;
     background-color: var(--primary-clr-light);
     box-shadow: 0 1.125em 1em -1em var(--accent-clr);
@@ -261,6 +261,7 @@ textarea:not([rows]) {
 .button:hover,
 .button:focus-visible {
     background-color: var(--secondary-clr);
+    color: var(--primary-clr);
 }
 
 .button[data-type="inverted"]:hover,
